# bug-triage-agent-

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  pyproject.toml  sample_run.txt
.github/workflows/: ci.yml
docs/: ASSIGNMENT_BRIEF.md
evals/: golden_cases.jsonl
samples/: batch_sample.csv  complete_bug.txt  critical_security.txt  invalid_needs_approval.txt  missing_info.txt
src/bug_triage/: __init__.py  actions.py  audit_log.py  classifier_agent.py  main.py  models.py  preprocess.py  red_flags.py  router.py  workflow.py
tests/: test_audit_log.py  test_batch.py  test_classifier_mock.py  test_golden_evals.py  test_models.py  test_preprocess.py  test_red_flags.py  test_router.py  test_workflow_build.py
