[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bug-triage"
version = "0.1.0"
description = "Bug Report Triage Workflow Agent (Microsoft Agent Framework homework project)"
requires-python = ">=3.10"
dependencies = [
    "agent-framework-core==1.8.1",
    "agent-framework-openai==1.8.1",
    "pydantic>=2,<3",
    "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
